welcome.lessons.welcome.bat.bool2.CigarParty.scala.error
cigarParty:7: error: ';' expected but '=' found.
    else { return false=}}
                       ^